gitops/technitium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: technitium-namespace
  labels:
    app.kubernetes.io/name: technitium
