gitops/technitium/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: technitium
  namespace: technitium-namespace
  labels:
    app.kubernetes.io/name: technitium
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: technitium
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: web
      port: 5380
      targetPort: 5380
      protocol: TCP
