gitops/technitium/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium-web
  namespace: technitium-namespace
  labels:
    app.kubernetes.io/name: technitium
spec:
  ingressClassName: traefik
  rules:
    - host: dns.owl.red
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: technitium-web
                port:
                  number: 80
